# fire-tracker

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: frp.yml  perimeters.yml  xmonitor.yml
scripts/: fidias_crossref.py  sync_frp.py
src/fire_tracker/: __init__.py  database.py  effis_perimeters.py  effis_perimeters_update.py  frp.py  frp_locator.py  frp_update.py  gradio_app.py  metar.py  meteogram.py  monitor.py  orchestrator.py  weather.py  wx_stations.py  xgrok.py  xmonitor.py
src/fire_tracker/api/: app.py
src/fire_tracker/api/static/: index.html
src/fire_tracker/api/static/css/: style.css
src/fire_tracker/api/static/js/: app.js
src/fire_tracker/scrapers/: __init__.py  base.py  feuxdeforet.py  fidias_clm.py  fogos.py  incendiscat.py  incyl.py  infoca.py
tests/: test_api.py  test_database.py
