[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-tracker"
version = "0.1.0"
description = "European wildfire tracking aggregator"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gunicorn>=21.2",
    "requests>=2.31",
    "pyproj>=3.6",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "playwright>=1.40",
    "psycopg2-binary>=2.9",
    "pyshp>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fire_tracker.api" = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
